alignment fix 2

--- a/assets/section-myduke-hero.css
+++ b/assets/section-myduke-hero.css
@@ -160,7 +160,7 @@
 
 .myduke-hero__inner--with-form {
   flex-direction: row;
-  align-items: flex-start;
+  align-items: flex-end;
   justify-content: space-between;
   gap: 4rem;
 }
@@ -180,6 +180,7 @@
 @media screen and (max-width: 1159px) {
   .myduke-hero__inner--with-form {
     flex-direction: column;
+    align-items: flex-start;
     gap: 6rem;
   }
 
